fixing font style on mobile res

--- a/css/styles.css
+++ b/css/styles.css
@@ -1222,6 +1222,9 @@ max-width: 380px;
   .container{
     margin-bottom: 72px;
   }
+  .card-title{
+    font-family: "TestSohneKraftig";
+  }
   .services{
     padding: 0;
     padding-top: 48px;
@@ -1245,19 +1248,9 @@ max-width: 380px;
     padding: 0;
     margin-bottom: 72px;
   }
-  /* .marketing {
-    margin-bottom: 72px;
+  .big-cta__button-text{
+    font-family: "TestSohneKraftig";
   }
-  .banking {
-    margin-bottom: 72px;
-  }
-  .big-title {
-    padding: 0;
-    margin-bottom: 72px;
-  }
-  .ad-tech{
-    margin-bottom: 72px;
-  } */
   .footer__wrapper{
     flex-direction: column;
     align-items: center;
